--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,51 +1,50 @@
-.home-container{
- 
- 
- 
- 
- 
+.home-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   min-height: fit-content;
-  background-image: url('../../assets/Home/bg.jpg');
+  background-image: url("../../assets/Home/bg.jpg");
 }
 
-.home-parent{
+.home-parent {
   display: flex;
   align-items: center;
   color: aliceblue;
 }
-.home-details-name{
+.home-details-name {
   font-size: 24px;
-  font-family: 'Poppins SemiBold';
+  font-family: "Poppins SemiBold";
 }
-.home-details-role{
+.home-details-role {
   display: flex;
   flex-direction: column;
   margin: 14px 0 24px 0;
 }
-.home-details-role h1{
+.home-details-role h1 {
   font-size: 40px;
   font-family: cursive;
 }
-.primary-text{
+.primary-text {
   color: (--white);
 }
-.highlighted-text{
-  color: var( --dark-orange);
+.highlighted-text {
+  color: var(--dark-orange);
 }
-.home-role-tagline{
+.home-role-tagline {
   font-size: 19px;
   margin: 5px 0 0 0;
-  font-family: 'Poppins Light';
+  font-family: "Poppins Light";
 }
-.home-options .highlighted-btn{
+.home-options .highlighted-btn {
   margin: 0 0 0 28px;
 }
-.home-options .highlighted-btn:hover{
+.home-options .highlighted-btn:hover {
   margin: 0 0 0 28px;
   background-color: cornsilk;
   color: #111;
 }
-.profile-picture{
+.profile-picture {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,4 +53,25 @@
   height: 380px;
   width: 380px;
   margin: 0 0px 0 100px;
+}
+.profile-picture-background {
+  height: 92%;
+  width: 92%;
+  background-image: url("../../assets/Home/pro.JPG");
+  background-size: cover;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.profile-picture-background:hover {
+  transform: scale(1.08);
+  transition: 1s ease-out;
+}
+.colz .colz-icon i{
+  color: white;
+  padding: 10px;
+  padding-left: 0px;
+}
+.colz .colz-icon i:hover{
+  transform: scale(1.6);
 }
