--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,6 +3,7 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+  height: 10%;
   min-height: fit-content;
   background-image: url("../../assets/Home/bg.jpg");
 }
@@ -29,7 +30,7 @@
   color: (--white);
 }
 .highlighted-text {
-  color: var(--dark-orange);
+  color: #FF5823;
 }
 .home-role-tagline {
   font-size: 19px;
@@ -74,4 +75,69 @@
 }
 .colz .colz-icon i:hover{
   transform: scale(1.6);
+}
+@media screen and (max-width: 1110px){
+  .profile-picture{
+    margin: 0 0px 0 80px;
+  }
+  .home-details-name{
+    font-size: 20px;
+  }
+  .home-details-role .primary-text{
+    font-size: 12px;
+  }
+  .home-options .btn{
+    width: 120px;
+    padding: 11px 0;
+    z-index: 700;
+  }
+}
+@media screen and (max-width: 910px){
+  .profile-picture{
+    height: 320px;
+    width: 320px;
+    margin: 0 0px 0 4px;
+  }
+}
+@media screen and (max-width: 810px){
+  .profile-picture{
+    margin: 0 !important;
+  }
+  .home-parent{
+    flex-direction: column-reverse;
+    margin: 40px 0 0 0;
+  }
+  .home-options{
+    display: flex;
+    justify-content: space-between;
+  }
+  .home-details{
+    margin: 25px 0 0;
+  }
+  .home-options .highlighted-btn{
+    margin: 0 !important;
+  }
+  .home-options .home-details-role{
+    text-align: center;
+  }
+}
+@media screen and (max-width: 375px){
+  .profile-picture{
+    height: 275px;
+    width: 275px;
+    margin-top: -90px;
+  }
+  .home-details{
+    width: 90%;
+  }
+}
+@media screen and (max-width: 240px){
+  .profile-picture{
+    height: 170px;
+    width: 170px;
+    margin-top: -200px;
+  }
+  .home-details{
+    width: 80%;
+  }
 }
