--- a/src/Components/Home/Footer/Footer.css
+++ b/src/Components/Home/Footer/Footer.css
@@ -1,3 +1,17 @@
 .footer-container{
-  
+  height: 17.8%;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+.footer-parent{
+  height: 100%;
+  width: 100%;
+  max-width: 1920px;
+}
+.image{
+  max-width: 100%;
+  height: 130px;
+  background-image: url("../../../assets/Home/shape.png");
 }
