--- a/src/Components/Home/Footer/Footer.css
+++ b/src/Components/Home/Footer/Footer.css
@@ -12,6 +12,12 @@
 }
 .image{
   max-width: 100%;
-  height: 130px;
+  height: 120px;
   background-image: url("../../../assets/Home/shape.png");
+}
+@media only screen and (max-width: 1110px) {
+  .footer-parent{
+    display: flex;
+    align-items: flex-end;
+  }
 }
