--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,8 +1,15 @@
 .aboutme-parent h1{
-  font-size: 48px;
+  font-size: 50px;
   font-weight: bolder;
-  font-family: "Arial";
+  font-family: "fantasy";
   text-align: center;
   justify-content: center;
   margin: 50px 0 0px 0;
+}
+.aboutme-parent h5{
+  font-size: 20px;
+  font-weight: "100";
+  font-family: "Monospace";
+  text-align: center;
+  justify-content: center;
 }
