--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -9,7 +9,7 @@
 .aboutme-parent h5{
   font-size: 20px;
   font-weight: "100";
-  font-family: "Monospace";
+  font-family: 'Courier New', Courier, monospace;
   text-align: center;
   justify-content: center;
 }
